tests/integration/snapshots/integration__common__object_missing_colon_with_comma.snap
---
source: tests/integration/common.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
{"hi", 
stdout --- 
<empty>
stderr --- 
error: expected colon after key, found `,`
 --> stdin:1:6
  |
1 | {"hi", 
  |  ----^
  |  |
  |  expected due to `"hi"`
  |
help: insert colon and placeholder value
  |
1 | {"hi": "ğŸŸğŸ›¹", 
  |      ++++++++
